--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "18.0.0",
     "react-flex-ready": "^1.3.5",
     "react-raster": "^8.2.1",
+    "styled-breakpoints": "^11.1.0",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.3.4"
   },
