:sparkles: feat, ospiti img 0.2

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-markdown": "^8.0.3",
     "react-raster": "^8.2.1",
     "remark-gfm": "^3.0.1",
+    "sharp": "^0.30.4",
     "styled-breakpoints": "^11.1.0",
     "styled-components": "^5.3.5",
     "styled-icons": "^10.45.0",
