--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.35.3",
     "embla-carousel-react": "^6.2.0",
     "framer-motion": "^6.3.3",
     "next": "12.1.5",
@@ -17,6 +18,7 @@
     "react-flex-ready": "^1.3.5",
     "react-markdown": "^8.0.3",
     "react-raster": "^8.2.1",
+    "react-spinners": "^0.12.0",
     "remark-gfm": "^3.0.1",
     "sharp": "^0.30.4",
     "styled-breakpoints": "^11.1.0",
