--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mantine/next": "v5.0.0-alpha.19",
     "@supabase/supabase-js": "^1.35.3",
     "embla-carousel-react": "^6.2.0",
-    "framer-motion": "^6.3.3",
+    "framer-motion": "^6.5.0",
     "next": "12.2.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -28,7 +28,8 @@
     "styled-components": "^5.3.5",
     "styled-icons": "^10.45.0",
     "styled-reset": "^4.3.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
